[gd_scene load_steps=2 format=3 uid="uid://c8p0ld7qjbg15"]

[ext_resource type="Script" path="res://scenes/map_finish_menu/map_finish_menu.gd" id="1_dno8b"]

[node name="MapFinishMenuLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_dno8b")
on_back = 4

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.0
offset_top = -178.0
offset_right = 407.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Level completed"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "Back"

[node name="ReplayButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "Replay"

[node name="NextButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "Next"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/HBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
